--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,17 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile project(':libraries:tess-two')
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
+
+
