--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cuny.gc.multimodality.gettingthere">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +23,10 @@
         <activity android:name=".NavMenu" />
         <activity android:name=".MapsMenu" />
         <activity android:name=".HelpMenu" />
-        <activity android:name=".StationMapDisplay"></activity>
+        <activity android:name=".StationMapDisplay" />
+        <activity android:name=".TakePhotoForOCR" />
+        <activity android:name=".NavCheck" />
+        <activity android:name=".OCRActivity"></activity>
     </application>
 
 </manifest>
