--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cuny.gc.multimodality.gettingthere">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -26,7 +28,9 @@
         <activity android:name=".StationMapDisplay" />
         <activity android:name=".TakePhotoForOCR" />
         <activity android:name=".NavCheck" />
-        <activity android:name=".OCRActivity"></activity>
+        <activity android:name=".OCRActivity" />
+        <activity android:name=".TextEntryCheck" />
+        <activity android:name=".NavList"></activity>
     </application>
 
 </manifest>
