--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,38 +1,1 @@
-apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
-
-android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
-
-    defaultConfig {
-        applicationId "cuny.gc.multimodality.gettingthere"
-        minSdkVersion 17
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
-
-repositories {
-    jcenter()
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-}
-
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile project(':libraries:tess-two')
-    compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.github.hotchemi:permissionsdispatcher:2.0.7'
-    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.0.7'
-}
-
-
+apply plugin: 'com.android.application'android {    compileSdkVersion 23    buildToolsVersion "23.0.3"    defaultConfig {        applicationId "cuny.gc.multimodality.gettingthere"        minSdkVersion 18        targetSdkVersion 23        versionCode 1        versionName "1.0"    }    buildTypes {        release {            minifyEnabled false            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'        }    }}buildscript {    repositories {        mavenCentral()    }    dependencies {        // replace with the current version of the Android plugin        classpath 'com.android.tools.build:gradle:2.1.0'        // the latest version of the android-apt plugin        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'    }}apply plugin: 'com.android.application'apply plugin: 'com.neenbedankt.android-apt'apply plugin: 'android-apt'repositories {    jcenter()    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }}dependencies {    compile fileTree(include: ['*.jar'], dir: 'libs')    testCompile 'junit:junit:4.12'    compile 'com.android.support:appcompat-v7:23.3.0'    compile project(':libraries:tess-two')    compile 'com.google.android.gms:play-services:8.4.0'    compile 'com.github.hotchemi:permissionsdispatcher:2.0.7'    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.0.7'}
